# Vietnamese-Alphabet-Pronunciation-Data-Collection

./: main.py  pyproject.toml  utils.py
.streamlit/: config.toml
